--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "typescript": "^5.0.4",
     "vitest": "1.3.0",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "@cloudflare/ai": "^1.2.2",
+    "base64-js": "^1.5.1",
+    "hono": "^4.4.5"
   }
 }
